--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body{
     /* align-self: stretch; */
     display: flex;
     flex-direction: column;
+    padding-bottom: 20px;
 }
 .card-hori-head{
     font-size: 25px;
@@ -47,6 +48,9 @@ body{
     font-weight: 100;
     color: rgb(189, 188, 188);
     line-height: 1.6;
+    /* padding-bottom: 10px; */
+    text-align: justify;
+    font-size: 16px;
 }
 
 
@@ -89,6 +93,10 @@ justify-content: space-between;
     font-size: 16px;
 }
 
+.card1-des{
+    padding-bottom: 20px;
+}
+
 
 /* card2 */
 .card2{
@@ -101,7 +109,11 @@ justify-content: space-between;
 }
 
 .card2-des{
-    padding-top: 15px;
+    padding-top: 12px;
     font-weight: 100;
     color: hsla(203, 44%, 93%, 0.604);
+    padding-bottom:20px;
+    font-size: 15px;
+    padding-right: 30px;
+    line-height: 1.4;
 }
