--- a/style.css
+++ b/style.css
@@ -9,11 +9,12 @@ body{
     width: 620px;
     /* padding: 50px; */
     border-radius: 8px;
-    height: 450px;
+    height: 500px;
     margin: auto;
     transform: translateY(150px);
     box-shadow:5px 5px 50px rgba(0, 0, 0, 0.207);
     background-clip: border-box;
+    /* background-color: lawngreen; */
 }
 
 /* horizontal card */
@@ -59,6 +60,7 @@ body{
 
 .card1{
 background-color: hsl(179, 62%, 43%);
+/* background-color: red; */
 color: white;
 border-bottom-left-radius: 8px;
 font-size: 16px;
@@ -101,6 +103,7 @@ justify-content: space-between;
 /* card2 */
 .card2{
     background-color: hsla(179, 62%, 43%, 0.872);
+    /* background-color: black; */
     border-bottom-right-radius: 8px;
     color: white;
     padding-right: 40px;
@@ -112,8 +115,9 @@ justify-content: space-between;
     padding-top: 12px;
     font-weight: 100;
     color: hsla(203, 44%, 93%, 0.604);
-    padding-bottom:20px;
+    /* padding-bottom:20px; */
     font-size: 15px;
     padding-right: 30px;
     line-height: 1.4;
+    /* background-color: hsla(179, 62%, 43%, 0.872); */
 }
